// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

<img
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`props should render correctly for fit contain 1`] = `
.emotion-0 {
  object-fit: contain;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`props should render correctly for fit cover 1`] = `
.emotion-0 {
  object-fit: cover;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`props should render correctly for fixed image 1`] = `
.emotion-0 {
  max-width: unset;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: var(--bb-palette-red, #ff0000)!important;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`theming Image.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`theming Image.contain should render correctly 1`] = `
.emotion-0 {
  object-fit: contain;
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`theming Image.cover should render correctly 1`] = `
.emotion-0 {
  object-fit: cover;
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;

exports[`theming Image.fixed should render correctly 1`] = `
.emotion-0 {
  max-width: unset;
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<img
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Image"
  src="test.png"
/>
`;
